extends Node
class_name SFX
@onready var bb_player: AudioStreamPlayer = $BrokenBrick
@onready var hb_player: AudioStreamPlayer = $HitBrick
@onready var ph_player: AudioStreamPlayer = $PlayerHit
@onready var wh_player: AudioStreamPlayer = $WallHit
@onready var l_player: AudioStreamPlayer = $Loss
@onready var al_player: AudioStreamPlayer = $AfterLoss
